Used INLA to take the place of SPNNGP

--- a/other_dataset/mra_reproduce/MRA_Application.Rmd
+++ b/other_dataset/mra_reproduce/MRA_Application.Rmd
@@ -357,36 +357,107 @@ model_ck %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h
 ```
 
 
-## NNGP Model
+## INLA 
+```{r}
+library(INLA)
+library(rSPDE)
+library(gridExtra)
+library(lattice)
 
+for (curr_index in 1:num_fold) {
+  train_index <- which(curr_index != train_index_all)
+  
+long_tr <- long[train_index]
+lat_tr <- lat[train_index]
+y_tr <- y[train_index]
+coords <- cbind(long_tr, lat_tr)
+
+non_convex_bdry <- inla.nonconvex.hull(coords, -0.03, -0.05, resolution = c(100, 100))
+mesh4 <- inla.mesh.2d(boundary = non_convex_bdry, max.edge=c(0.5,1), 
+                      offset = c(0.5, 1),
+                      cutoff = 0.3)
+
+
+
+A<-inla.spde.make.A(mesh=mesh4,loc=as.matrix(coords))
+
+
+spde <- inla.spde2.matern(mesh4, alpha=0.5)
+iset <- inla.spde.make.index(name = "spatial.field", spde$n.spde)
+
+stk <- inla.stack(data=list(y=y_tr), #the response
+                  
+                  A=list(A,1),  #the A matrix; the 1 is included to make the list(covariates)
+                  
+                  effects=list(c(list(Intercept=1), #the Intercept
+                                 iset),  #the spatial index
+                               #the covariates
+                               list(long = long_tr,
+                                    lat = lat_tr)
+                  ), 
+                  
+                  #this is a quick name so you can call upon easily
+                  tag='dat')
+
+
+formula0<- y ~ -1 + long + lat + f(spatial.field, model=spde) 
+
+model0<-inla(formula0, #the formula
+             data=inla.stack.data(stk,spde=spde),  #the data stack
+             family= 'gaussian',   #which family the data comes from
+             control.predictor=list(A=inla.stack.A(stk),compute=TRUE),  #compute gives you the marginals of the linear predictor
+             control.compute = list(dic = TRUE, waic = TRUE, config = TRUE), #model diagnostics and config = TRUE gives you the GMRF
+             verbose = FALSE) #can include verbose=TRUE to see the log of the model runs
+
+
+
+
+long_te <- long[-train_index]
+lat_te <- lat[-train_index]
+y_te <- y[-train_index]
+
+
+test_coords <- cbind(long_te, lat_te)
+
+
+# Prediction
+Aprediction <- inla.spde.make.A(mesh = mesh4, loc = test_coords);
+
+stk.pred <- inla.stack(data=list(y=NA), 
+                       A=list(Aprediction,1), 
+                       effects=list(c(list(Intercept=1)
+                                      ,iset),
+                                    list(
+                                      long = long_te,
+                                      lat = lat_te
+                                    )
+                       ), 
+                       tag='pred')
+
+#join the prediction stack with the one for the full data
+stk.full <- inla.stack(stk, stk.pred)
+
+p.res.pred<-inla(formula0, data=inla.stack.data(stk.full,spde=spde),
+                 family= 'gaussian', quantiles = NULL,
+                 control.predictor=list(link = 1, A=inla.stack.A(stk.full),compute=FALSE),  #compute gives you the marginals of the linear predictor
+                 control.compute = list(config = TRUE), #model diagnostics and config = TRUE gives you the GMRF
+                 control.inla(strategy = 'simplified.laplace', huge = TRUE),  #this is to make it run faster
+                 verbose = FALSE) 
+index.pred<-inla.stack.index(stk.full, "pred")$data
+p.res.pred$summary.linear.predictor[index.pred,"mean"]
+pred_mse <- mean((p.res.pred$summary.linear.predictor[index.pred,"mean"] - soc_te)^2)
+
+}
+
+```
 
 ```{r}
-doParallel::registerDoParallel(cores = 16)
-for (curr_index in 1:num_fold) {
-  train_index <- which(train_index_all != curr_index)
-  long_tr <- min_max_scale(long)[train_index]
-lat_tr <- min_max_scale(lat)[train_index]
-y_tr <- y[train_index]
-y_te <- y[-train_index]
-long_te <- min_max_scale(long)[-train_index]
-lat_te <- min_max_scale(lat)[-train_index]
 
-y_cov <- cbind(long,lat)
-y_cov_tr <- y_cov[train_index, ]
-y_cov_te <- y_cov[-train_index, ]
-
-spnn_mod_15 <- spNNGP(y_tr ~ long_tr + lat_tr , coords = cbind(long_tr,lat_tr), cov.model = "exponential",
-                       priors = list("sigma.sq.IG" = c(0.001, 0.001),"tau.sq.IG" = c(0.001,0.001), "phi.Unif" = c(0.1,3)),
-                       starting = list("sigma.sq" = 60, "tau.sq" = 0.1, "phi" = 2),
-                       tuning = list( "sigma.sq" = 0.1, "tau.sq" = 0.1, "phi" = 0.1)
-                       , n.neighbors = 15, n.samples = 5000)
-
- cv_curr_pred <- predict(spnn_mod_15, X.0 = cbind(1,as.matrix(y_cov_te)), coords.0 = cbind(long_te, lat_te))$p.y.0
-
-
-
-loss_nngp[curr_index] <- mean(( apply(cv_curr_pred, 1, mean) - y_te)^2)
-}
+loss_all <- as.data.frame(cbind(loss_nngp, loss_dnn, loss_dk, loss_ck))
+ggplot() +
+  geom_boxplot(data = reshape2::melt(loss_all), aes(x = variable, y = value)) +
+   coord_flip()
+write.csv(as.data.frame(loss_all),here::here("other_dataset/mra_reproduce/loss_mra.csv"),row.names = FALSE)
 
 ```
 
