--- a/other_dataset/data_candidate/chicago_crime/chicago_crime_application.Rmd
+++ b/other_dataset/data_candidate/chicago_crime/chicago_crime_application.Rmd
@@ -6,6 +6,7 @@ output: pdf_document
 ---
 
 ```{r}
+# The data set is from: https://data.cityofchicago.org/Public-Safety/Crimes-2001-to-Present/ijzp-q8t2
 knitr::opts_chunk$set(echo = TRUE)
 rm(list = ls())
 library(FRK)
