--- a/other_dataset/satellite/Sat_Application.Rmd
+++ b/other_dataset/satellite/Sat_Application.Rmd
@@ -503,47 +503,42 @@ write.csv(as.data.frame(pred_inla),here::here("other_dataset/satellite/inla_pred
 
 
 ```
-
+# CRPS Calculation
 
 ```{r}
 
 load(here::here("other_dataset/satellite/SatelliteTemps.RData"))
-
 sat_raw <- na.omit(sat.temps)
-
 colnames(sat_raw) <- c("long","lat","y")
 
 
-
 sat_dat <- aggregate(y ~ long + lat, data = sat_raw, FUN = mean)
-
- ggplot() +
-   geom_point(aes(x = sat_dat[,1], y = sat_dat[,2]), size = 0.1)
 
 
 long <- sat_dat$long
 lat <- sat_dat$lat
 y <- sat_dat$y
 
-
-
+library(verification)
 calculate_dist_between <- function(x){
   return( mean(spDists(matrix(x, ncol = 1)))  )
 }
 
 calculate_dist_true <- function(x, true_x){
-  
-  return( mean(spDists(matrix(x, ncol = 1), matrix(true_x, ncol = 1))) )
-  
+
+  return( abs(x-true_x) )
+
 }
 
-crps <- function(posterior_matrix, true_value){
-  
-  between_sample <- apply(posterior_matrix, 1, calculate_dist_between)
-  sample_residual <-  apply(posterior_matrix, 1, calculate_dist_true, true_x = true_value)
-  
+crps <- function(prediction_matrix, true_value){
+  print("Calculating between-sample distance . . .")
+  between_sample <- apply(prediction_matrix, 1, calculate_dist_between)
+  print("Calculating absolute error . . .")
+
+  sample_residual <- rowMeans(apply(prediction_matrix, 2, calculate_dist_true, true_x = true_value))
+
   res <- 0.5 * between_sample - sample_residual
-  return(out)
+  return(res)
 }
 
 
@@ -551,10 +546,59 @@ pred_dnn <- as.matrix(read.csv(here::here("D:/77/UCSC/study/Reasearch/temp/dnn_p
 pred_dk <- as.matrix(read.csv(here::here("D:/77/UCSC/study/Reasearch/temp/dk_pred.csv")))
 pred_ck <- as.matrix(read.csv(here::here("D:/77/UCSC/study/Reasearch/temp/ck_pred.csv")))
 pred_inla <- as.matrix(read.csv(here::here("D:/77/UCSC/study/Reasearch/temp/inla_pred.csv")))
+source(here::here("other_dataset/satellite/scoringRules_wrappers.R"))
+library(scoringutils)
+crps_dnn_all <- crps(pred_dnn,y)
+crps_dk_all <- crps(pred_dk,y)
+crps_ck_all <- crps(pred_ck,y)
+crps_inla_all <- crps(pred_inla,y)
 
+print(paste("CRPS of DNN is: ", mean(crps_dnn_all)))
+print(paste("CRPS of DK is: ", mean(crps_dk_all)))
+print(paste("CRPS of CK is: ", mean(crps_ck_all)))
+print(paste("CRPS of INLA is: ", mean(crps_inla_all)))
 ```
 
+# Interval Score Calculation
 
+```{r}
+int_score <- function(l,u,true_x,alpha = 0.05){
+  out_1 <- u-l
+  out_2 <- 2/alpha * (l-true_x) * ifelse(true_x < l, 1, 0)
+  out_3 <- 2/alpha * (u-true_x) * ifelse(true_x > u, 1, 0)
+  return(out_1 + out_2 + out_3)
+}
+
+all_interval_score <- function(prediction_sample, alpha = 0.05, true_x){
+  num_all <- length(true_x)
+ pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
+                     max = num_all, # Maximum value of the progress bar
+                     style = 3,    # Progress bar style (also available style = 1 and style = 2)
+                     width = 50,   # Progress bar width. Defaults to getOption("width")
+                     char = "=")   # Character used to create the bar
+ 
+  
+  all_score <- rep(NA, length(true_x))
+ for (int_score_idx in 1:length(true_x)) {
+   setTxtProgressBar(pb, int_score_idx)
+    l <- quantile(prediction_sample[int_score_idx,], alpha/2)
+    u <- quantile(prediction_sample[int_score_idx,], 1-alpha/2)
+    all_score[int_score_idx] <- int_score(l = l, u = u, true_x = true_x[int_score_idx], alpha = alpha)
+  }
+ return(all_score)
+}
+
+int_score_dnn <- all_interval_score(prediction_sample = pred_dnn, true_x = y)
+int_score_dk <- all_interval_score(prediction_sample = pred_dk, true_x = y)
+int_score_ck <- all_interval_score(prediction_sample = pred_ck, true_x = y)
+int_score_inla <- all_interval_score(prediction_sample = pred_inla, true_x = y)
+
+print(paste("Interval Score of DNN is: ", mean(int_score_dnn)))
+print(paste("Interval Score of DK is: ", mean(int_score_dk)))
+print(paste("Interval Score of CK is: ", mean(int_score_ck )))
+print(paste("Interval Score of INLA is: ", mean(int_score_inla )))
+
+```
 
 
 
